# roster

./: .gitignore  CHANGELOG.md  README.md  biome.jsonc  bump.config.mjs  components.json  index.html  package-lock.json  package.json  release-please-config.json  skills-lock.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
.cursor/rules/: screaming-architecture.mdc
.github/workflows/: ci.yml  release.yml
.interface-design/: system.md
.scripts/: build.bat
src/: app.module.css  app.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_data.rs  lib.rs  main.rs
src-tauri/src/bridge/: cooldown.rs  dto.rs  export.rs  intake.rs  login.rs  logs.rs  metadata.rs  mod.rs  preferences.rs  reset.rs  roster.rs  status.rs  util.rs
src-tauri/src/export/: mod.rs
src-tauri/src/forget/: mod.rs  remove.rs
src-tauri/src/intake/: batch.rs  classify.rs  clipboard.rs  import.rs  jwt.rs  mod.rs  parse.rs
src-tauri/src/log/: mod.rs
src-tauri/src/login/: activate.rs  launch.rs  mod.rs  sign_in.rs
src-tauri/src/metadata/: mod.rs  record.rs  store.rs  watch.rs
src-tauri/src/preferences/: mod.rs  model.rs  store.rs
src-tauri/src/presence/: downloads.rs  launch_options.rs  mod.rs  notifications.rs  persona.rs
src-tauri/src/reset/: clear.rs  mod.rs
src-tauri/src/roster/: account.rs  avatar.rs  mod.rs  read.rs
src-tauri/src/secret/: crc.rs  dpapi.rs  mod.rs
src-tauri/src/status/: fetch.rs  mod.rs  profile.rs
src-tauri/src/steam_client/: autologin.rs  location.rs  mod.rs  process.rs
src-tauri/src/steam_config/: config_vdf.rs  connect_cache.rs  localconfig.rs  loginusers.rs  mod.rs
src-tauri/src/tray/: actions.rs  menu.rs  mod.rs  window.rs
src-tauri/src/vdf/: edit.rs  mod.rs  query.rs  tokens.rs
src-tauri/src/window/: affinity.rs  apply.rs  mod.rs
src/components/: hint.tsx
src/cooldown/: cooldown-badge.module.css  cooldown-badge.tsx  cooldown-dialog.module.css  cooldown-dialog.tsx  cooldown-menu.module.css  cooldown-menu.tsx  cooldown.ts  use-cooldown.ts  use-now.ts
src/export/: use-export.ts
src/feedback/: confirm-dialog.tsx  log-panel.module.css  log-panel.tsx  modal.module.css  modal.tsx  toast.module.css  toast.tsx  use-log-lines.ts
src/forget/: use-forget.ts
src/intake/: import-dialog.module.css  import-dialog.tsx  use-classify-import.ts  use-intake.ts
src/ipc/: events.ts  invoke.ts
src/login/: use-login.ts
src/platform/: events.ts  invoke.ts
src/preferences/: preferences.ts  setting-list.tsx  settings-dialog.module.css  settings-dialog.tsx  settings-fields.ts  settings-tabs.tsx  (+4 more)
(+114 files in other folders)
