[package]
name = "roster"
version = "0.2.0"
edition = "2021"
description = "Steam login switcher"
build = "build.rs"

[lib]
name = "roster_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
crc32fast = "1.5"
arboard = "3"
winreg = "0.56"
ureq = "3"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
]

[profile.release]
opt-level = "s"
lto = true
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
